syntax = "proto3";

option csharp_namespace = "AuthenticationService";

service GrpcAuthenticationService{
    rpc LoginUser(LoginUserRequest) returns(LoggedUserResponse);
}

message LoginUserRequest{
    string username = 1;
    string password = 2;
}

message LoggedUserResponse{
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string username = 4;
    repeated string roles = 5;
    string access_token = 6;
}