syntax = "proto3";

option csharp_namespace = "GrpcShippingItemService";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service GrpcShippingItemService {
    rpc UpdateShippingStatus (GrpcUpdateShippingStatusDto) returns (google.protobuf.Empty);
    rpc GetAllShippingItems (google.protobuf.Empty) returns (ListGrpcShippingItemDto);
    rpc GetShippingById (google.protobuf.StringValue) returns (GrpcShippingItemDto);
    rpc GetShippingByOrderId (google.protobuf.StringValue) returns (GrpcShippingItemDto);
}

message GrpcUpdateShippingStatusDto {
    string id = 1;
    int32 status = 2;
}

message GrpcShippingItemDto{
    string id = 1;
    string order_id = 2;
    int32 status = 3;
}

message ListGrpcShippingItemDto {
    repeated GrpcShippingItemDto items = 1;
}